--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ section .title::after{
     width: 42%;
 }
 
-.skills .skills-content .right .Python::beffore{
+.skills .skills-content .right .Python::before{
      width: 51%;
 }
 
